k8s/base/backend/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: querido-diario
spec:
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
